/*
 * Copyright (c) 2018 Ryuusuke Azuma All Rights Reserved.
 */

package com.mynet.kazekima.wsfighterscard.data;

public class ScoreEntity {

    private int mScoreId;
    private String mGameId;
    private String mMatchingDeck;
    private String mWinOrLose;
    private String mMemo;
}
