/*
 * Copyright (c) 2026 Ryuusuke Azuma All Rights Reserved.
 */

@startuml

!define TABLE(name) entity name
!define COL(name) <color:black><&key></color> name

TABLE(game) {
  COL(id) INTEGER <<PK>>
  --
  game_name TEXT <<NOT NULL>>
  game_date INTEGER <<NOT NULL>>
  game_style INTEGER <<NOT NULL>>
  memo TEXT <<NOT NULL>>
}

TABLE(score) {
  COL(id) INTEGER <<PK>>
  --
  COL(game_id) INTEGER <<FK>>
  --
  battle_deck TEXT <<NOT NULL>>
  matching_deck TEXT <<NOT NULL>>
  first_second INTEGER <<NOT NULL>>
  win_lose INTEGER <<NOT NULL>>
  team_win_lose INTEGER
  memo TEXT <<NOT NULL>>
}

TABLE(fighter) {
  COL(id) INTEGER <<PK>>
  --
  name TEXT <<NOT NULL>>
  is_self INTEGER <<NOT NULL>>
  memo TEXT <<NOT NULL>>
}

TABLE(deck) {
  COL(id) INTEGER <<PK>>
  --
  COL(fighter_id) INTEGER <<FK>>
  --
  deck_name TEXT <<NOT NULL>>
  memo TEXT <<NOT NULL>>
}

game "1" -- "0..*" score : "contains"
fighter "1" -- "0..*" deck : "has"

@enduml
